Tue Feb 19 11:46:31 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSTextView.m ([-dealloc]): RETAIN self before destroying
	the text network.  (Suggestion by Alexander Malmberg
	<alexander@malmberg.org>).
	
2002-02-18  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWindow.m ([NSWindow -close]): Changes made earlier
	would not compile w/ gcc < 3.0.
	
2002-02-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableHeaderView.m ([NSTableHeaderView -mouseDown:]): 
	The tableHeaderCell is now redrawn when column reordering is on.

2002-02-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSWindow.m ([NSWindow -close]): ignore the call if the
	window is already closed.

2002-02-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSApplication.m ([NSApplication -terminate:]): send a
	close message to all the windows.

Thu Feb 14 10:45:48 2002  Nicola Pero  <n.pero@mi.flashnet.it>
                          Michael Hanni <mhanni@yahoo.com>

	* Source/NSMenuItemCell.m ([-drawStateImageWithFrame:inView:]):
	Exit as soon as possible if we have no state image to draw.
	([-imageRectForBounds:]), ([-titleRectForBounds:]): Do not pad for
	the state image if the state image has no width.
	* Source/NSPopUpButtonCell.m ([-insertItemWithTitle:atIndex:]):
	Set the On and Mixed image of the new menu item to nil.
	([-selectItem:]): Do not call setChangesState: NO on the selected
	menu item.
	
2002-02-13  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/GSTextStoarge.m: Add GSIMap option for minor performance
	improvement.
	* Tools/make_services.m: Use correct user root.  Noticed that this
	tool needs fixing to use the correct paths as provided by the
	NSSearchPathsForDirectoriesInDomains() function.
	* Source/NSSpellServer.m: Use NSSearchPathsForDirectoriesInDomains()

2002-02-13  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableHeaderCell.m: New drawing code, support for
	highlighted cells.